# awesome-persian-ai-cheaters

./: .gitignore  ContentProtection.md  README.md  compare_posts.py  pyproject.toml  test.md  update_readme.py  usage.md  violatoin_template.md
.github/ISSUE_TEMPLATE/: report_violation.md  report_violation.yml
.github/workflows/: check_violations.yml  main.yml
