[tool.poetry]
name = "awesome-persian-ai-cheaters"
version = "0.1.0"
description = ""
authors = ["MSNP1381 <mohamandnematpoor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.1"
bs4 = "^0.0.2"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
